--- a/style.css
+++ b/style.css
@@ -21,15 +21,21 @@ body {
 }
 
 .main {
+    margin: 1rem 0 4rem 0;
+    width: 80rem;
+    max-width: 90%;
+
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
+    place-content: center center;
+    grid-gap: 1.5rem;
 }
 
 .main-card {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2rem 1rem;
+    padding: 2rem;
 
     background-color: #eee;
     border-radius: 20px;
@@ -39,7 +45,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 1rem;
+    margin-top: 2.5rem;
 }
 
 .main-card-fig {
@@ -51,7 +57,8 @@ body {
 
 .main-card-fig-img {
     width: 100%;
-    transform: translateY(20%);
+    transform: translateY(25%);
+    filter: drop-shadow(0 8px 6px rgba(0,0,0, .4));
 }
 
 .main-card-content-num,
