--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
+
+    background: linear-gradient(to bottom, #fff, #eaeaea);
 }
 
 .main-title {
