--- a/style.css
+++ b/style.css
@@ -96,37 +96,57 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    background: #74ebd5; /* fallback for old browsers */
+    background: linear-gradient(to right, #74ebd5, #acb6e5);
 }
 
 .poke-main-section {
     flex: 1;
+    display: grid;
+    grid-template-columns: .75fr 1fr;
+    gap: 2rem;
     max-width: 60%;
     padding: 3.5rem 2.5rem;
     border-radius: 30px;
-    background-color: lightcoral;
+    background-color: hsl(204, 45%, 99%);
+    box-shadow: 0 9px 22px -4px rgba(0,0,0, .2);
 }
 
-.poke-main-section-prog {
+.poke-main-section-data-title {
+    font-size: 2.1rem;
+    text-transform: uppercase;
+}
+
+.poke-main-section-data-abilities-title {
+    font-weight: 400;
+}
+
+.poke-main-section-data-abilities-title span {
+    font-size: 1rem;
+}
+
+.poke-main-section-stats-title {
+    margin-bottom: .75rem;
+    text-transform: uppercase;
+    font-weight: 400;
+}
+
+.poke-main-section-stats-prog {
     width: 15rem;
     height: 2rem;
-    margin: 1rem;
+    margin-bottom: 2rem;
     background-color: #dedede;
     border-radius: 500px;
 }
 
-.poke-main-section-prog-bar {
-    background: #4c51bf;
-    height: 100%;
-    border-radius: 500px;
-}
-
-.poke-main-section-prog-bar {
+.poke-main-section-stats-prog-bar {
     display: flex;
     justify-content: center;
     align-items: center;
+    background: #4c51bf;
+    height: 100%;
+    border-radius: 500px;
+
     color: #fff;
-}
-
-.poke-main-section-abilities-field {
-
 }
