Changed bottom position of loading el to 5%

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ input {
     /* Hidden by default, shown on API request */
     display: none;
     position: fixed;
-    bottom: 3rem;
+    bottom: 5%;
 }
 
 .loading-ball {
