--- a/style.css
+++ b/style.css
@@ -67,8 +67,11 @@ input {
     flex-direction: column;
     align-items: center;
     padding: 2rem;
+    background: #C3DAFE;  /* fallback for old browsers */
+    background: linear-gradient(to bottom, hsl(221, 90%, 86%), hsl(217, 97%, 88%)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     
-    background-color: #eee;
+    
+    
     border-radius: 20px;
     box-shadow: 0 6px 9px rgba(0,0,0, .175);
     cursor: pointer;
