--- a/style.css
+++ b/style.css
@@ -169,6 +169,26 @@ input {
 }
 
 /* Poke Card Page */
+.popup-container {
+    /* Show on top */
+    z-index: 10;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    min-height: 100vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, .85);
+}
+
+/* .popup {
+    overflow-y: scroll;
+    height: 100vh;
+} */
+
 .poke-main {
     min-height: 100vh;
     display: flex;
@@ -178,6 +198,7 @@ input {
 }
 
 .poke-main-section {
+    position: relative;
     flex: 1;
     display: grid;
     grid-template-columns: .75fr 1fr;
@@ -187,6 +208,32 @@ input {
     border-radius: 30px;
     background-color: hsl(204, 45%, 99%);
     box-shadow: 0 9px 22px -4px rgba(0,0,0, .185);
+}
+
+.popup__close-btn {
+    position: absolute;
+    top: 1rem;
+    right: 1.5rem;
+    padding: .25rem;
+    
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.popup__close-btn__x {
+    width: 1.25rem;
+    height: 1.25rem;
+    opacity: .5;
+    transition: opacity 110ms ease-in-out;
+}
+
+.popup__close-btn:hover .popup__close-btn__x {
+    opacity: 1;
 }
 
 .poke-main-section-data-title {
