--- a/style.css
+++ b/style.css
@@ -172,29 +172,16 @@ input {
 .popup-container {
     /* Show on top */
     z-index: 10;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    min-height: 100vh;
+    width: 100%;
+    height: 100%;
 
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: rgba(255, 255, 255, .85);
-}
-
-/* .popup {
-    overflow-y: scroll;
-    height: 100vh;
-} */
-
-.poke-main {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--main-bg-clr);
 }
 
 .poke-main-section {
