Using visibility: hidden in css for prev pagination-btn when value is null

--- a/style.css
+++ b/style.css
@@ -69,6 +69,10 @@ input {
     color: var(--primary-clr);
 }
 
+.btn--hide {
+    visibility: hidden;
+}
+
 .main {
     margin: 1rem 0 4rem 0;
     width: 80rem;
