--- a/style.css
+++ b/style.css
@@ -56,7 +56,18 @@ input {
     color: #999;
 }
 
+.pagination-controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .pagination-controls__btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .25rem;
+
     margin: 0 .25rem;
     padding: .5rem .75rem;
     text-transform: uppercase;
@@ -64,9 +75,15 @@ input {
     font-size: .875rem;
     font-weight: 700;
     background: none;
-    border: 1px solid var(--primary-clr);
+    border: 1px solid #90cdf4;
+    border-radius: 4px;
     cursor: pointer;
     color: var(--primary-clr);
+}
+
+.chevron {
+    width: 1rem;
+    height: 1rem;
 }
 
 .btn--hide {
