--- a/style.css
+++ b/style.css
@@ -322,6 +322,15 @@ input {
     color: #fff;
 }
 
+/* Easter Egg Gif */
+.easter-egg-gif {
+    position: fixed;
+    z-index: 20;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 @media screen and (max-width: 80em) {
     .poke-main-section { max-width: 92%; }
 }
