--- a/style.css
+++ b/style.css
@@ -107,16 +107,54 @@ input {
 }
 
 .main-card {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 2rem;
-    background: #c3dafe;  /* fallback for old browsers */
+    background: #c3dafe;  /* fallback */
     background: linear-gradient(to bottom, hsl(221, 90%, 86%), hsl(217, 97%, 88%));
     border-radius: 20px;
     box-shadow: 0 6px 9px rgba(0,0,0, .165);
     cursor: pointer;
+    overflow-x: hidden;
 }
+
+/* Only apply to devices that can hover properly */
+@media (hover: hover) {
+    /* Holographic Effect */
+    .main-card:hover::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        z-index: 2;
+        background-image: linear-gradient(
+            115deg,
+            rgb(0, 231, 255) 0%,
+            rgb(255, 0, 231) 100%
+        );
+        opacity: .4;
+        transform: scaleX(4);
+        transform-origin: left;
+        animation: holo 3s ease-in infinite alternate-reverse;
+    }
+        
+    @keyframes holo {
+        0% {
+            opacity: .5;
+            transform: translateX(-10%) scaleX(4);
+        }
+    
+        100% {
+            opacity: .25;
+            transform: translateX(-300%) scaleX(4);
+        }
+    }
+}
+
 
 .main-card-content {
     display: flex;
