--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ input {
     overflow-x: hidden;
 }
 
+
 /* Only apply to devices that can hover properly */
 @media (hover: hover) {
     /* Holographic Effect */
@@ -130,26 +131,42 @@ input {
         right: 0;
         left: 0;
         bottom: 0;
-        z-index: 2;
+        z-index: 1;
         background-image: linear-gradient(
             115deg,
             rgb(0, 231, 255) 0%,
             rgb(255, 0, 231) 100%
         );
-        opacity: .4;
+        opacity: .35;
         transform: scaleX(4);
         transform-origin: left;
         animation: holo 3s ease-in infinite alternate-reverse;
     }
+    
+    /* Sparkles */
+    .main-card:hover::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 5;
+        background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/13471/sparkles.gif");
+        background-position: center;
+        background-size: 100%;
+        mix-blend-mode: color-dodge;
+        opacity: .6;
+    }
         
     @keyframes holo {
         0% {
-            opacity: .5;
+            opacity: .35;
             transform: translateX(-10%) scaleX(4);
         }
     
         100% {
-            opacity: .25;
+            opacity: .225;
             transform: translateX(-300%) scaleX(4);
         }
     }
