--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ input {
             right: 0;
             bottom: 0;
             z-index: 5;
-            background-image: url("./images/sparkles.gif");
+            background-image: url("./images/sparkles.webp");
             background-position: center;
             background-size: 100%;
             mix-blend-mode: color-dodge;
