--- a/style.css
+++ b/style.css
@@ -15,6 +15,15 @@ input {
     letter-spacing: .02em;
 }
 
+.cap-first {
+    display: inline-block;
+}
+
+.cap-first::first-letter {
+    /* Needs to be a block-level elem or inline-block for uppercase */
+    text-transform: uppercase;
+}
+
 .home {
     margin-top: 3rem;
     display: flex;
