Replaced .cap-first::first-letter selector and property with text-transform: capitalize on span elem

--- a/style.css
+++ b/style.css
@@ -16,12 +16,7 @@ input {
 }
 
 .cap-first {
-    display: inline-block;
-}
-
-.cap-first::first-letter {
-    /* Needs to be a block-level elem or inline-block for uppercase */
-    text-transform: uppercase;
+    text-transform: capitalize;
 }
 
 .home {
