--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ input {
 
 
 /* Only apply to devices that can hover properly */
-@media (hover: hover) {
+@media (hover: hover) and (pointer: fine) {
     /* Holographic Effect */
     .main-card:hover::before {
         content: "";
@@ -147,23 +147,23 @@ input {
         animation: holo 3s ease-in infinite alternate-reverse;
     }
     
-    /* Only show gif sparkles animation for larger devices */
-    @media screen and (min-width: 32em) {
-        .main-card:hover::after {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            z-index: 5;
-            background-image: url("./images/sparkles.webp");
-            background-position: center;
-            background-size: 100%;
-            mix-blend-mode: color-dodge;
-            opacity: .6;
-        }
+    .main-card:hover::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 5;
+        background-image: url("./images/sparkles.webp");
+        background-position: center;
+        background-size: 100%;
+        mix-blend-mode: color-dodge;
+        opacity: .6;
     }
+    /* Only show gif sparkles animation for larger devices */
+    /* @media screen and (min-width: 32em) {
+    } */
         
     @keyframes holo {
         0% {
