--- a/style.css
+++ b/style.css
@@ -94,6 +94,10 @@ input {
     visibility: hidden;
 }
 
+.card--hide {
+    display: none;
+}
+
 .main {
     margin: 1rem 0 4rem 0;
     width: 80rem;
