Replace width and height img attributes with 96 for new sprite img dimension sizes, adjust CSS style to allow height: auto for popup img once width/height attributes are set

--- a/style.css
+++ b/style.css
@@ -353,6 +353,7 @@ input {
 .poke-main-section-data-img {
     margin-top: 1.5rem;
     width: 45%;
+    height: auto;
 }
 
 .poke-main-section-data-body:first-of-type {
