Decrease font-size to 1.125rem (18px)

--- a/style.css
+++ b/style.css
@@ -372,6 +372,7 @@ input {
     margin-bottom: .5rem;
     text-transform: uppercase;
     font-weight: 400;
+    font-size: 1.125rem;
 }
 
 .poke-main-section-stats-prog {
