--- a/style.css
+++ b/style.css
@@ -86,6 +86,10 @@ input {
     color: var(--primary-clr);
 }
 
+.pagination-controls__btn:focus {
+    outline-color: var(--primary-clr);
+}
+
 .chevron {
     width: 1rem;
     height: 1rem;
@@ -113,6 +117,11 @@ input {
 .main-card-btn-container {
     background: none;
     border: none;
+    border-radius: 20px;
+}
+
+.main-card-btn-container:focus {
+    outline-color: var(--primary-clr);
 }
 
 .main-card {
