--- a/style.css
+++ b/style.css
@@ -150,10 +150,7 @@ button {
     .main-card:hover::before {
         content: "";
         position: absolute;
-        top: 0;
-        right: 0;
-        left: 0;
-        bottom: 0;
+        inset: 0;
         z-index: 1;
         background-image: linear-gradient(
             115deg,
@@ -169,10 +166,7 @@ button {
     .main-card:hover::after {
         content: "";
         position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
+        inset: 0;
         z-index: 5;
         background-image: url("./images/sparkles.webp");
         background-position: center;
