Add error paragraph elem to display error text when a Pokemon character is not found

--- a/style.css
+++ b/style.css
@@ -76,6 +76,24 @@ input:focus {
     color: #999;
 }
 
+.home-error {
+    margin-bottom: 2rem;
+    padding: .5rem 1rem;
+    max-width: 55ch;
+    min-height: 4.25rem;
+    line-height: 1.6;
+    background-color: #fecdd3;
+    color: #881337;
+    border-radius: 5px;
+    font-weight: 700;
+    opacity: 0;
+    transition: opacity 2000ms ease-in-out;
+}
+
+.home-error--show {
+    opacity: 1;
+}
+
 .pagination-controls {
     display: flex;
     justify-content: center;
