--- a/style.css
+++ b/style.css
@@ -240,6 +240,7 @@ input:focus {
     height: 70%;
     transform: translateY(15%);
     filter: drop-shadow(0 4px 4px rgba(0,0,0, .31));
+    image-rendering: pixelated;
 }
 
 .main-card-content-num,
