--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@
     --primary-clr: hsl(193, 82%, 31%);
     --popup-card-bg: hsl(204, 45%, 99%); /* default value */
 
-    --slight-spacing: .03em;
+    --slight-spacing: 0.03em;
 }
 
 html,
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
 }
 
 input,
@@ -42,7 +42,7 @@ input:focus {
     align-items: center;
     flex-direction: column;
     min-height: 100vh;
-    
+
     background-color: var(--main-bg-clr);
 }
 
@@ -60,15 +60,15 @@ input:focus {
 
 .home-form-search {
     width: 100%;
-    padding: .5rem 1rem;
+    padding: 0.5rem 1rem;
     font-size: 1.125rem;
     border-radius: 500px;
     border: none;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, .125);
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.125);
 }
 
 .home-form-search:focus {
-    outline-offset: .25rem;
+    outline-offset: 0.25rem;
     outline-color: var(--primary-clr);
 }
 
@@ -78,7 +78,7 @@ input:focus {
 
 .home-error {
     margin-bottom: 2rem;
-    padding: .5rem 1rem;
+    padding: 0.5rem 1rem;
     max-width: 55ch;
     min-height: 4.25rem;
     line-height: 1.6;
@@ -104,13 +104,13 @@ input:focus {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: .25rem;
+    gap: 0.25rem;
 
-    margin: 0 .25rem;
-    padding: .5rem .75rem;
+    margin: 0 0.25rem;
+    padding: 0.5rem 0.75rem;
     text-transform: uppercase;
     letter-spacing: var(--slight-spacing);
-    font-size: .875rem;
+    font-size: 0.875rem;
     font-weight: 700;
     background: none;
     border: 1px solid var(--primary-clr);
@@ -141,7 +141,7 @@ input:focus {
     width: 80rem;
     max-width: 90%;
     min-height: 277rem;
-    
+
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
     align-content: start;
@@ -168,9 +168,13 @@ input:focus {
     align-items: center;
     padding: 2rem;
     background: #c3dafe; /* fallback */
-    background: linear-gradient(to bottom, hsl(221, 90%, 86%), hsl(217, 97%, 88%));
+    background: linear-gradient(
+        to bottom,
+        hsl(221, 90%, 86%),
+        hsl(217, 97%, 88%)
+    );
     border-radius: 20px;
-    box-shadow: 0 6px 9px rgba(0,0,0, .165);
+    box-shadow: 0 6px 9px rgba(0, 0, 0, 0.165);
     overflow-x: hidden;
 }
 
@@ -187,7 +191,7 @@ input:focus {
             rgb(0, 231, 255) 0%,
             rgb(255, 0, 231) 100%
         );
-        opacity: .35;
+        opacity: 0.35;
         transform: scaleX(4);
         transform-origin: left;
         animation: holo 4s ease-in-out infinite alternate-reverse;
@@ -202,17 +206,17 @@ input:focus {
         background-position: center;
         background-size: 100%;
         mix-blend-mode: color-dodge;
-        opacity: .6;
+        opacity: 0.6;
     }
-        
+
     @keyframes holo {
         0% {
-            opacity: .35;
+            opacity: 0.35;
             transform: translateX(-10%) scaleX(4);
         }
-    
+
         100% {
-            opacity: .225;
+            opacity: 0.225;
             transform: translateX(-300%) scaleX(4);
         }
     }
@@ -239,20 +243,20 @@ input:focus {
     width: 70%;
     height: 70%;
     transform: translateY(15%);
-    filter: drop-shadow(0 4px 4px rgba(0,0,0, .31));
+    filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.31));
     image-rendering: pixelated;
 }
 
 .main-card-content-num,
 .main-card-content-name,
 .main-card-content-type {
-    margin: .2rem 0;
+    margin: 0.2rem 0;
 }
 
 .main-card-content-num {
-    padding: .25rem .75rem;
+    padding: 0.25rem 0.75rem;
     line-height: 1;
-    font-size: .875rem;
+    font-size: 0.875rem;
     background-color: hsl(0, 0%, 98%);
     border-radius: 500px;
     color: hsl(0, 0%, 36%);
@@ -267,7 +271,7 @@ input:focus {
 }
 
 .main-card-content-type {
-    font-size: .85rem;
+    font-size: 0.85rem;
 }
 
 .loading {
@@ -284,10 +288,10 @@ input:focus {
 }
 
 .loading-ball {
-    width: .8rem;
-    height: .8rem;
-    margin-left: .375rem;
-    margin-right: .375rem;
+    width: 0.8rem;
+    height: 0.8rem;
+    margin-left: 0.375rem;
+    margin-right: 0.375rem;
     border-radius: 50%;
     background-color: #4299e1;
     animation: bounce 600ms ease-in-out infinite;
@@ -334,7 +338,7 @@ input:focus {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 255, 255, .85);
+    background-color: rgba(255, 255, 255, 0.85);
     opacity: 0;
 
     animation: fade-in 300ms ease forwards;
@@ -370,21 +374,21 @@ input:focus {
     position: relative;
     flex: 1;
     display: grid;
-    grid-template-columns: .75fr 1fr;
+    grid-template-columns: 0.75fr 1fr;
     gap: 2rem;
     max-width: 60%;
     padding: 3.5rem 2.5rem;
     border-radius: 30px;
     background-color: var(--popup-card-bg);
-    box-shadow: 0 9px 22px -4px rgba(0,0,0, .185);
+    box-shadow: 0 9px 22px -4px rgba(0, 0, 0, 0.185);
 }
 
 .popup__close-btn {
     position: absolute;
     top: 1rem;
     right: 1.5rem;
-    padding: .25rem;
-    
+    padding: 0.25rem;
+
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -397,7 +401,7 @@ input:focus {
 .popup__close-btn__x {
     width: 1.25rem;
     height: 1.25rem;
-    opacity: .5;
+    opacity: 0.5;
     transition: opacity 110ms ease-in-out;
 }
 
@@ -430,7 +434,7 @@ input:focus {
 }
 
 .poke-main-section-stats-title {
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
     text-transform: uppercase;
     font-weight: 400;
     font-size: 1.125rem;
@@ -482,7 +486,9 @@ body {
 }
 
 @media screen and (max-width: 80em) {
-    .poke-main-section { max-width: 92%; }
+    .poke-main-section {
+        max-width: 92%;
+    }
 }
 
 @media screen and (max-width: 46em) {
@@ -491,7 +497,9 @@ body {
         overflow-y: scroll;
     }
 
-    .poke-main-section-stats-prog { width: 100%; }
+    .poke-main-section-stats-prog {
+        width: 100%;
+    }
 
     .poke-main-section {
         margin: 3rem;
@@ -504,17 +512,27 @@ body {
     }
 
     .poke-main-section-data-img,
-    .poke-main-section-data-title { align-self: center; }
+    .poke-main-section-data-title {
+        align-self: center;
+    }
 }
 
 @media screen and (max-width: 34.25em) {
-    .home { margin-top: 1.5rem; }
+    .home {
+        margin-top: 1.5rem;
+    }
 
-    .home-title { margin-bottom: 1.25rem; }
+    .home-title {
+        margin-bottom: 1.25rem;
+    }
 
-    .home-form { margin-bottom: 2rem; }
+    .home-form {
+        margin-bottom: 2rem;
+    }
 
-    .poke-main-section { margin: 1.5rem; }
+    .poke-main-section {
+        margin: 1.5rem;
+    }
 }
 
 @media screen and (max-width: 26.5em) {
@@ -522,6 +540,8 @@ body {
         margin: 1.5rem;
         padding: 2.5rem 2rem;
     }
-    
-    .poke-main-section-stats-title { margin-bottom: .25rem; }
+
+    .poke-main-section-stats-title {
+        margin-bottom: 0.25rem;
+    }
 }
