--- a/style.css
+++ b/style.css
@@ -368,6 +368,15 @@ input:focus {
         opacity: 0;
     }
 } */
+#pokemon-popup,
+#popup-content {
+    border-radius: 30px;
+    border: none;
+}
+
+#pokemon-popup {
+    margin: auto;
+}
 
 [popover]:popover-open::backdrop {
     background-color: rgb(0 0 0 / 35%);
