--- a/style.css
+++ b/style.css
@@ -325,53 +325,16 @@ input:focus {
     display: flex;
 }
 
-/* Poke Card Page */
-
-/* .popup-container {
-    z-index: 10;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.85);
-    opacity: 0;
-
-    animation: fade-in 300ms ease forwards;
-}
-
-.popup-container.popup-container--fade-out {
-    pointer-events: none;
-    animation: fade-out 300ms ease forwards;
-}
-
-@keyframes fade-in {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
-@keyframes fade-out {
-    from {
-        opacity: 1;
-    }
-
-    to {
-        opacity: 0;
-    }
-} */
 #pokemon-popup,
 #popup-content {
     border-radius: 30px;
     border: none;
+}
+
+/* OPEN state */
+#pokemon-popup:popover-open {
+    opacity: 1;
+    transform: scale(1);
 }
 
 #pokemon-popup {
@@ -380,10 +343,45 @@ input:focus {
     max-height: 90vh;
     overflow-y: auto;
     overscroll-behavior-block: contain;
+
+    /* FINAL exit animation state */
+    opacity: 0;
+    transform: scale(0.925);
+    transition:
+        opacity 300ms ease-in-out,
+        transform 300ms ease-in-out,
+        overlay 300ms ease-in-out allow-discrete,
+        display 300ms ease-in-out allow-discrete;
 }
 
+/* popover animation */
+/* BEFORE state */
+@starting-style {
+    #pokemon-popup:popover-open {
+        opacity: 0;
+        transform: scale(0.95);
+    }
+}
+
+/* popover backdrop animation */
+/* BEFORE state */
+[popover]::backdrop {
+    background-color: transparent;
+    transition:
+        background-color 300ms ease-in-out,
+        overlay 300ms ease-in-out allow-discrete,
+        display 300ms ease-in-out allow-discrete;
+}
+
+/* OPEN state */
 [popover]:popover-open::backdrop {
     background-color: rgb(0 0 0 / 35%);
+}
+
+@starting-style {
+    [popover]:popover-open::backdrop {
+        background-color: transparent;
+    }
 }
 
 .poke-main-section {
